--- a/pyterrier-frontend/src/App.css
+++ b/pyterrier-frontend/src/App.css
@@ -2,20 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #3968c8;
+  height: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +13,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body {
+  color: #000000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Button {
+  background-color: #3968c8;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 10px;
+  cursor: pointer;
 }
